--- a/R/Preliminary_report.Rmd
+++ b/R/Preliminary_report.Rmd
@@ -58,7 +58,7 @@ sm_all<-read.csv("../Results/stability_metric_and_env_all.csv")
 str(sm_all) # total communities within 1979-2019 timespan, we selected only 4 taxa
 ```
 
-But see the below table which shows the sample size for each taxa and the datasource, we have very few sample size for terrestrial invertebrates. I feel it's better to write a paper about north american birds vs european fish (atleast we have >500 datapoints for birds and fish). But I am open to other ideas. I don't know which kind of data requirement we need for response diversity, but if we can have the body size or biomass (as trait) data then I can test the H0: whether response diversity increases the stability or influenced by temperature?
+But see the below table which shows the sample size for each taxa and the datasource, we have very few sample size for terrestrial invertebrates. **I feel** it's better to write a paper about north american birds vs european fish (atleast we have >500 datapoints for birds and fish). But I am open to other ideas. I don't know which kind of data requirement we need for response diversity, but if we can have the body size or biomass (as trait) data then I can test the H0: whether response diversity increases the stability or influenced by temperature?
 ```{r read_data_str2, echo=F}
 sm_all%>%group_by(TAXA,source)%>%summarise(n=n())%>%ungroup()
 ```
@@ -94,37 +94,130 @@ sitemaplist[[3]]
 sitemaplist[[4]]
 ```
 
-## Temperature trend for each taxa
-
-Here we will see temperature trend (summarized by skewness) for the sites: are the annual temperature shifting to hotter end or cooler end? red region for negative skewness means with years temperature is shifting to hotter end during the study period of a given site. So the plot is density distribution of such sites. Most of the freshwater sites experiencing hotter environment (mainly in EU), so I am expecting to see stronger change due to temperature for fish and freshwater invertebrates rather than terrestrial taxa.
-```{r temp_figure_alltaxa, echo=FALSE, fig.cap="Density distribution of skewness for annual temperature from all sites considered and also by taxa", out.width = '80%', fig.align='center'}
-
-br <- c(min(sm_all$t_skw),0,max(sm_all$t_skw))
-
-p1<-sm_all%>%
-  ggplot( aes(x=t_skw, stat(density))) +
-  ggtitle("all taxa")+
-  geom_text(
-    aes(label = round(stat(count) / sum((count)), 3)), 
-    stat = 'bin', vjust = -0.5, breaks = br
-  )+ ylim(c(0, 1))+geom_density()+
-  annotate("rect", xmin=min(sm_all$t_skw), xmax=0, ymin=0, ymax=1, alpha=0.15, fill="red")+
-  annotate("rect", xmin=0, xmax=max(sm_all$t_skw), ymin=0, ymax=1, alpha=0.15, fill="blue")+
-  theme_classic()
-p1
-
-# Now repeat the above plot by taxa
-p2<-sm_all%>%
-  ggplot( aes(x=t_skw,y=..scaled..))+geom_density()+ylim(c(0, 1))+
-  annotate("rect", xmin=min(sm_all$t_skw), xmax=0, ymin=0, ymax=1, alpha=0.15, fill="red")+
-  annotate("rect", xmin=0, xmax=max(sm_all$t_skw), ymin=0, ymax=1, alpha=0.15, fill="blue")+
-  theme_classic()+facet_wrap(~TAXA)
-p2 
-```
-
 # Methods
 
 # Results
+
+I want to see how community stability-drivers relationship would affect by the changing environmental variable (annual temperature distribution). Temperature could vary in many ways (see \@ref(fig:drawing-figure)). I am considering three aspects of environmental (temperature) timeseries here: median of annual temperatures ($t_{med}$) during the study periods, trend ($t_{trend}$) and skewness ($t_{skw}$) of annual temperature timeseries for a given community. 
+My intuition is:
+
+  - community stability would be affected by any of these temperature component either directly or indirectly via the drivers.
+  - As $t_{med}$, $t_{trend}$ changes, diversity-stability relationship should be affected, so stability would change via portfolio effect. e.g. terrestrial plants, beetles, and vertebrates show declining richness with incresing temperature in the past studies.
+  - Similarly, changing $t_{med}$, $t_{trend}$ should relate how species interactions get modified in a changing environment. For example, as temperature increases $t_{med}$, community might loose some species, and might be dominated by fewer species which may or may not be synchronous, depending on the species at that particular environment. But if $t_{trend}$ increases, the community is exposing to warmer environment with years, then maybe warm adapted species will become dominant and species with similar traits can have higher synchrony.
+  - Changing $t_{skw}$, means frequent extreme events (like heatwaves, negative skewed annual temperature distribution), and it should be related to tail-dependent synchrony, where pairwise synchrony between species gets stronger beyond a certain threshold.
+  
+```{r drawing-figure, echo=FALSE, fig.cap="Temperature timeseries figure", out.width = '50%', fig.align='center'}
+knitr::include_graphics("../Results/some_assets/drawing.jpg")
+```
+
+But before go into modeling I just want to visualize the raw data below for birds and fish (top two largest taxa):
+```{r exploratory_plots, echo=F, out.width = '75%',fig.cap="richness-stability-synchrony-relationship"}
+library(dplyr)
+library(tidyverse)
+# get stability vs richness rawdata plot for each taxa first
+sm_all%>%filter(TAXA%in%c("birds","fish"))%>%ggplot(aes(x=nsp,y=iCValt))+geom_point(alpha=0.3)+geom_smooth(method="lm")+
+  scale_x_continuous(trans = 'log2') +
+  scale_y_continuous(trans = 'log2')+xlab("Richness")+ylab("Community stability")+
+  facet_wrap(~TAXA)+theme_bw()
+
+taxa<-"birds"
+q_T_taxa<-sm_all%>%filter(TAXA==taxa)%>%summarise(q=quantile(t_med,c(0.25,0.75)))
+
+lowT_taxa<-sm_all%>%filter(TAXA==taxa)%>%filter(t_med<=unname(q_T_taxa[1,1]))
+highT_taxa<-sm_all%>%filter(TAXA==taxa)%>%filter(t_med>=unname(q_T_taxa[2,1]))
+
+sb<-sm_all%>%filter(TAXA==taxa)
+
+ggplot()+
+  geom_point(data=sb,aes(x=nsp,y=iCValt),alpha=0.2)+
+  geom_point(data=lowT_taxa,aes(x=nsp,y=iCValt),alpha=0.3,color="blue")+
+  geom_point(data=highT_taxa,aes(x=nsp,y=iCValt),alpha=0.3,color="red")+
+  geom_smooth(data=sb,aes(x=nsp,y=iCValt, colour="black"),method="lm", se=F) +
+  geom_smooth(data=lowT_taxa,aes(x=nsp,y=iCValt, colour="blue"),method="lm", se=F)+
+  geom_smooth(data=highT_taxa,aes(x=nsp,y=iCValt, colour="red"),method="lm", se=F)+
+  scale_x_continuous(trans = 'log2') +
+  scale_y_continuous(trans = 'log2')+
+  ylab("Stability, log2 scale")+xlab("Richness, log2 scale")+
+  scale_color_identity(name = "", guide="legend",
+                       labels = c("all data", "low T, <50%CI", "high T, >50%CI"))+
+  ggtitle(taxa)+theme_bw()
+
+ggplot()+
+  geom_point(data=sb,aes(x=phi_LdM,y=iCValt),alpha=0.2)+
+  geom_point(data=lowT_taxa,aes(x=phi_LdM,y=iCValt),alpha=0.3,color="blue")+
+  geom_point(data=highT_taxa,aes(x=phi_LdM,y=iCValt),alpha=0.3,color="red")+
+  geom_smooth(data=sb,aes(x=phi_LdM,y=iCValt, colour="black"),method="lm", se=F) +
+  geom_smooth(data=lowT_taxa,aes(x=phi_LdM,y=iCValt, colour="blue"),method="lm", se=F)+
+  geom_smooth(data=highT_taxa,aes(x=phi_LdM,y=iCValt, colour="red"),method="lm", se=F)+
+  scale_x_continuous(trans = 'log2') +
+  scale_y_continuous(trans = 'log2')+
+  ylab("Stability, log2 scale")+xlab("Synchrony, VR_LdM, log2 scale")+
+  scale_color_identity(name = "", guide="legend",
+                       labels = c("all data", "low T, <50%CI", "high T, >50%CI"))+
+  ggtitle(taxa)+theme_bw()
+
+# do a boxplot for VR at low/high temp
+lowT_taxa$label<-"low T"
+highT_taxa$label<-"high T"
+compare_T<-rbind(lowT_taxa,highT_taxa)
+ggplot(data = compare_T, aes(x=label, y=phi_LdM)) + 
+  geom_boxplot(aes(fill=label))+ggtitle(taxa)+xlab("Temperature beyond 50% CI")+ylab("Synchrony")+theme_bw()
+
+taxa<-"fish"
+q_T_taxa<-sm_all%>%filter(TAXA==taxa)%>%summarise(q=quantile(t_med,c(0.25,0.75)))
+
+lowT_taxa<-sm_all%>%filter(TAXA==taxa)%>%filter(t_med<=unname(q_T_taxa[1,1]))
+highT_taxa<-sm_all%>%filter(TAXA==taxa)%>%filter(t_med>=unname(q_T_taxa[2,1]))
+
+sb<-sm_all%>%filter(TAXA==taxa)
+
+ggplot()+
+  geom_point(data=sb,aes(x=nsp,y=iCValt),alpha=0.2)+
+  geom_point(data=lowT_taxa,aes(x=nsp,y=iCValt),alpha=0.3,color="blue")+
+  geom_point(data=highT_taxa,aes(x=nsp,y=iCValt),alpha=0.3,color="red")+
+  geom_smooth(data=sb,aes(x=nsp,y=iCValt, colour="black"),method="lm", se=F) +
+  geom_smooth(data=lowT_taxa,aes(x=nsp,y=iCValt, colour="blue"),method="lm", se=F)+
+  geom_smooth(data=highT_taxa,aes(x=nsp,y=iCValt, colour="red"),method="lm", se=F)+
+  scale_x_continuous(trans = 'log2') +
+  scale_y_continuous(trans = 'log2')+
+  ylab("Stability, log2 scale")+xlab("Richness, log2 scale")+
+  scale_color_identity(name = "", guide="legend",
+                       labels = c("all data", "low T, <50%CI", "high T, >50%CI"))+
+  ggtitle(taxa)+theme_bw()
+
+ggplot()+
+  geom_point(data=sb,aes(x=phi_LdM,y=iCValt),alpha=0.2)+
+  geom_point(data=lowT_taxa,aes(x=phi_LdM,y=iCValt),alpha=0.3,color="blue")+
+  geom_point(data=highT_taxa,aes(x=phi_LdM,y=iCValt),alpha=0.3,color="red")+
+  geom_smooth(data=sb,aes(x=phi_LdM,y=iCValt, colour="black"),method="lm", se=F) +
+  geom_smooth(data=lowT_taxa,aes(x=phi_LdM,y=iCValt, colour="blue"),method="lm", se=F)+
+  geom_smooth(data=highT_taxa,aes(x=phi_LdM,y=iCValt, colour="red"),method="lm", se=F)+
+  scale_x_continuous(trans = 'log2') +
+  scale_y_continuous(trans = 'log2')+
+  ylab("Stability, log2 scale")+xlab("Synchrony, VR_LdM, log2 scale")+
+  scale_color_identity(name = "", guide="legend",
+                       labels = c("all data", "low T, <50%CI", "high T, >50%CI"))+
+  ggtitle(taxa)+theme_bw()
+
+# do a boxplot for VR at low/high temp
+lowT_taxa$label<-"low T"
+highT_taxa$label<-"high T"
+compare_T<-rbind(lowT_taxa,highT_taxa)
+ggplot(data = compare_T, aes(x=label, y=phi_LdM)) + 
+  geom_boxplot(aes(fill=label))+ggtitle(taxa)+xlab("Temperature beyond 50% CI")+ylab("Synchrony")+theme_bw()
+```
+
+So, from the exploratory plots we can see: at higher temperature positive stability-diversity relationship becomes stronger for birds but for fish it becomes negative. Also fish becomes more asynchronous with increasing temperature. So, why does that happen? to find this we could explore how much the bird species and fish species are consistent to temperature change across all communities. The cue is: if fish species are not much consistent in their response to warming and vary across sites, that means you cannot make a conclusion that they would become similar with changing temperature. On another note, bird species should be more consistent towards warming if their is no change in their synchrony level across communities. we will test this below.
+
+```{r check_consistency, echo=F, cache=T, message=F, cache.extra=list(mtime("../Results/stability_metric_and_env_all.csv"), mtime("get_sp_birds.R"),mtime("get_sp_fish.R"))}
+# I got the idea when discussing with Blake
+source("get_sp_birds.R")
+source("get_sp_fish.R")
+```
+
+From the above plot you can see that fish species are more or less equally divided showing positive or negative correlation across sites, whereas birds are more consistent in positive response towards warming across sites. So, imagine a scenario where warming kills some fish species across sites, then there would be qual chance of living fish that are varying in response. 
+
+Now, we will do a path analysis for a simplistic mixed effect model to see the environmental effects on community stability for both taxa. 
 
 ```{r model_psem, echo=F, cache=T, message=F, cache.extra=list(mtime("../Results/stability_metric_and_env_all.csv"), mtime("plot_psem.R"))}
 library(tidyverse)
@@ -168,12 +261,11 @@ taxa<-"birds"
 dat<-mydat_scaled%>%filter(TAXA==taxa)
 n<-nrow(dat)
 model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ t_med+t_skw+(1|UID),data=dat),
-  lmer(A ~ t_med+t_skw+(1|UID),data=dat),
-  lmer(R~t_med+t_skw+(1|UID),data=dat),
-  lmer(stability ~ (R + VR +A)+t_med+t_skw+
-         R:t_med+ A:t_med+ VR:t_med+
-         R:t_skw+ A:t_skw+ VR:t_skw+(1|UID), data=dat))
+  lmer(VR ~ t_med+trend_t_tau+(1|UID),data=dat),
+  lmer(A ~ t_skw+(1|UID),data=dat),
+  lmer(R~t_med+trend_t_tau+(1|UID),data=dat),
+  lmer(stability ~ (R + VR +A)+t_med+trend_t_tau+t_skw+
+         (1|UID), data=dat))
 cc<-coefs(model_psem)
 plot_psem(n,taxa,cc,layout="circle")
 #print(summary(model_psem))
@@ -184,19 +276,28 @@ taxa<-"fish"
 dat<-mydat_scaled%>%filter(TAXA==taxa)
 n<-nrow(dat)
 model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ t_med+t_skw+(1|UID),data=dat),
-  lmer(A ~ t_med+t_skw+(1|UID),data=dat),
-  lmer(R~t_med+t_skw+(1|UID),data=dat),
-  lmer(stability ~ (R + VR +A)+t_med+t_skw+
-         R:t_med+ A:t_med+ VR:t_med+
-         R:t_skw+ A:t_skw+ VR:t_skw+(1|UID), data=dat))
+  lmer(VR ~ t_med+trend_t_tau+(1|UID),data=dat),
+  lmer(A ~ t_skw+(1|UID),data=dat),
+  lmer(R~t_med+trend_t_tau+(1|UID),data=dat),
+  lmer(stability ~ (R + VR +A)+t_med+trend_t_tau+t_skw+
+         (1|UID), data=dat))
 cc<-coefs(model_psem)
 plot_psem(n,taxa,cc,layout="circle")
 #print(summary(model_psem))
 saveRDS(model_psem,paste(resloc,"model_psem_",taxa,".RDS",sep=""))
 ```
 
+So, from the path analysis, what do we see for birds -
 
+- increasing temperature trend (communities exposed to continuous warming) decreases species richness, increasing synchrony. This is consistent to our idea of species sorting with similar traits.
+- increasing extreme heatwaves (note this is negative skewness) will increase tail dep synchrony. 
+- positive diversity-stability relationship and negative synchrony-stability relationship are observed as expected. 
+
+and for fish -
+
+- overall synchrony (variance ratio) is the important determinant for stability (this we knew from BioDyn project findings), as it connects the environmental effects to stability.
+- both warming scenario (median temperature or temperature trend) increases richness, increasing temperature increases more asynchrony (-ve effect on VR), which is also consistent with more variable traits for the fish species. 
+- increasing extremes makes community biomass more variable (-ve effect of heatwaves on stability). 
 
 # Discussion
 
